# Boxedmino

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: cold_clear.rs  conf.rs  consts.rs  dirs.rs  error_window.rs  game.rs  git.rs  help.txt  injected.lua  main.rs  main_window.rs  paths.rs  setup.rs
ui/: main.slint
~/.config/: Boxedmino
