[package]
name = "boxedmino"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
copypasta = "0.10.1"
home = "0.5.9"
once_cell = "1.20.2"
open = "5.3.0"
reqwest = "0.12.8"
rfd = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
slint = "1.8.0"
tokio = { version = "^1", features = ["rt", "rt-multi-thread"] }

[build-dependencies]
slint-build = "1.8.0"
