[package]
name = "boxedmino"
version = "0.3.0"
edition = "2021"
description = "Techmino version manager and save sandboxing"
repository = "https://github.com/26F-Studio/Boxedmino"
license = "GPL-3.0-only"
license-file = "LICENSE"
keywords = ["techmino", "game", "stacker", "blocks", "blockstacker"]
categories = ["games", "virtualization"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
copypasta = "0.10.1"
home = "0.5.9"
once_cell = "1.20.2"
open = "5.3.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
rfd = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
slint = "1.8.0"
tokio = { version = "^1", features = ["rt", "rt-multi-thread"] }
zip = { version = "2.2.0", default-features = false, features = ["bzip2", "deflate", "deflate64", "lzma"] }

[build-dependencies]
slint-build = "1.8.0"
